--- a/index.html
+++ b/index.html
@@ -34,15 +34,8 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>The Coding Crew</h4>
-        <p>The coding crew is a group of developers that makes tutorial videos for technical things such as creating a website and posts them on YouTube.</p>
-      </div>
-    </div>
-   
-    <div class="row">
-      <div class="offset-by-one-half one-half column">
-        <h4>The Coding Crew</h4>
-        <p>The coding crew is a group of developers that makes tutorial videos for technical things such as creating a website and posts them on YouTube.</p>
+        <h4>Zorgtech</h4>
+        <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
       </div>
     </div>
   </div>
