--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <center><h4>Zorgtech</h4></center>
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Zorgtech</h4>
         <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
       </div>
     </div>
