--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="container">
     <center style="margin-top: 10%"><h4>Zorgtech</h4></center>
     <div class="row">
-      <div class="one-half column" style="margin-top: 5%">
+      <div class="offset-by-one-half one-half column" style="margin-top: 5%">
         <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
       </div>
     </div>
