--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
+  <div class="container" style="background-color:#36B5FF">
     <center style="margin-top: 10%"><h4>Zorgtech</h4></center>
     <div class="row">
       <div class="offset-by-one-half one-half column" style="margin-top: 10%">
