--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container" style="background-color:#36B5FF">
+<div style="background-color:#36B5FF">
+  <div class="container" >
     <center style="margin-top: 10%"><h4>Zorgtech</h4></center>
     <div class="row">
       <div class="offset-by-one-half one-half column" style="margin-top: 10%">
@@ -39,6 +40,7 @@
       </div>
     </div>
   </div>
+</div>
   
 
 <!-- End Document
