--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <center style="margin-top: 10%"><h4>Zorgtech</h4></center>
     <div class="row">
       <div class="offset-by-one-half one-half column" style="margin-top: 10%">
-        <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
+        <p>Zorgtech is a coding orginization started and created by Hampton M.<br> Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
       </div>
     </div>
   </div>
