--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div style="background-color:#36B5FF">
   <div class="container" >
-    <center style="margin-top: 10%"><h4>Zorgtech</h4></center>
+<center style="margin-top: 10%"><h4>Zorgtech</h4></center>
+</div>
+<div style="background-color:#36B5FF">
+
+    
     <div class="row">
       <div class="offset-by-one-half one-half column" style="margin-top: 10%">
-        <p>Zorgtech is a coding orginization started and created by Hampton M.<br> Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
+        <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
       </div>
     </div>
   </div>
