--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     
     <div class="row">
-      <div class="offset-by-one-half one-half column" style="margin-top: 10%">
+      <div class="one-half column" style="margin-top: 5%">
         <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
       </div>
     </div>
