--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 <div style="background-color:#36B5FF">
 
-    
+     <div class="container" > 
     <div class="row">
       <div class="one-half column" style="margin-top: 5%">
         <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
