--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="one-half column" style="margin-top: 5%">
+                <div class="one-half column" style="margin-top: 5%;margin-bottom:5%;">
                     <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
                 </div>
             </div>
