--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="one-half column" style="margin-top: 5%;">
-                    <p>Zorgtech is a coding orginization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
+                    <p>Zorgtech is a coding organization started and created by Hampton M. Zorgtech strives to make inovations in the coding world and have a fun time doing it.</p>
                 </div>
             </div>
         </div>
