--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 			</div>
 
 			<p class="ref">
-				© Zorgtech 2016-2016<br>
-				Image credits: <a href="http://www.eso.org/public/images/eso1205a/">ESO/VISTA/J. Emerson. Acknowledgment: Cambridge Astronomical Survey Unit</a>
+				© Zorgtech 2016-2016
 			</p>
 		</div><!-- /container -->
 		<script src="js/TweenLite.min.js"></script>
