--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="content">
 				<div id="large-header" class="large-header">
 					<canvas id="demo-canvas"></canvas>
-					<h1 class="main-title" style="word-wrap: break-word; width:100%;rgba(0,0,0,0.1)">Zorgtech<span class="thin">.org</span></h1>
+					<h1 class="main-title" style="word-wrap: break-word; width:100%;background-color:rgba(0,0,0,0.5);">Zorgtech<span class="thin">.org</span></h1>
 				</div>
 				<div class="codrops-header">
 					<h1>Welcome to Zorgtech's website! <span>We strive to advance the internet in new and exciting ways!</span></h1>
