--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 				<div id="large-header" class="large-header">
 					<canvas id="demo-canvas"></canvas>
 					<h1 class="main-title" style="word-wrap: break-word; width:100%;background-color:rgba(0,0,0,0.5);">Zorgtech<span class="thin">.org</span></h1><br>
-					<h3 class="main-title" style="word-wrap: break-word; width:100%;background-color:rgba(0,0,0,0.5);">Hello, New Idea<span class="thin">.org</span></h3>
 				</div>
 				<div class="codrops-header">
-					<h1>Welcome to Zorgtech's website! <span>We strive to advance the internet in new and exciting ways!</span></h1>
+					<h1>Zorgtech<span>We strive to advance the internet in new and exciting ways!</span></h1>
 					<p>
 						Zorgtech is owned by, Hampton M. Hampton loves to code and create things using coding various langauges like HTML, css, javascript, and php!
 					</p>
