--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         						Created in 2016
      			 			</span>
                             <span>
-        						<a href="https://zorgtech-site-beta-herohamp.c9users.io/CubePlatforming/" target="_blank">
+        						<a href="https://cube-guy-herohamp.c9users.io/" target="_blank">
             						<i class="play icon"></i>
             						Play Game
         						</a>
