--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="header, canvas, animated, creative, inspiration, javascript" />
     <meta name="author" content="Zorgtech" />
     <link rel="shortcut icon" href="../favicon.ico">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.4.3.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
@@ -27,7 +28,7 @@
         <div class="content">
             <div id="large-header" class="large-header">
                 <canvas id="demo-canvas"></canvas>
-                <h1 class="main-title" style="word-wrap: break-word; width:100%;">Zorgtech<span class="thin">.org</span></h1>
+                <h1 class="main-title" style="word-wrap: break-word; width:100%;">Zorgtech<span class="thin" id="org">.org</span></h1>
                 <br>
             </div>
             <div class="codrops-header">
@@ -60,7 +61,7 @@
         						Created in 2016
      			 			</span>
                             <span>
-        						<a href="https://cube-guy-herohamp.c9users.io/" target="_blank">
+        						<a href="https://zorgtech-site-beta-herohamp.c9users.io/CubePlatforming/" target="_blank">
             						<i class="play icon"></i>
             						Play Game
         						</a>
@@ -103,7 +104,7 @@
             <script src="js/TweenLite.min.js"></script>
             <script src="js/EasePack.min.js"></script>
             <script src="js/rAF.js"></script>
-            <script src="js/demo-1.js"></script>
+            <script src="js/main.js"></script>
 </body>
 
 </html>
