--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         						Created in 2016
      			 			</span>
                             <span>
-        						<a href="https://zide-herohamp.c9users.io/" target="_blank">
+        						<a href="https://zide.zorgtech.org" target="_blank">
             						<i class="external icon"></i>
             						Go to site!
         						</a>
