--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         						Created in 2016
      			 			</span>
                             <span>
-        						<a href="https://zorgtech-site-beta-herohamp.c9users.io/CubePlatforming/" target="_blank">
+        						<a href="javascript:alert('Website Down');" target="_blank">
             						<i class="play icon"></i>
             						Play Game
         						</a>
