--- a/index.html
+++ b/index.html
@@ -93,6 +93,26 @@
         						</a>
      					 	</span>
                         </div>
+			<div class="content">
+                            <div class="header">Fkmath.js</div>
+                            <div class="meta">
+                                <a>Finished</a>
+                            </div>
+                            <div class="description">
+                                A javascript package that removes the need for the annoying little Math. in front of all math commands. Ex Math.abs(-1) is not longer needed just do abs(-1)
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            <span class="right floated">
+        						Created in 2016
+     			 			</span>
+                            <span>
+        						<a href="https://raw.githubusercontent.com/zorgtech/fkmath.js/master/fkmath.js" target="_blank">
+            						<i class="external icon"></i>
+            						Go to JS file!
+        						</a>
+     					 	</span>
+                        </div>
                     </div>
                 </div>
                 
