--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
         						</a>
      					 	</span>
                         </div>
+			<div class="card">
+                        <div class="image">
+                            <canvas></canvas>
+                        </div>
 			<div class="content">
                             <div class="header">Fkmath.js</div>
                             <div class="meta">
