--- a/index.html
+++ b/index.html
@@ -96,6 +96,24 @@
                                 </a>
                             </span> </div>
                         </div>
+                        <div class="card">
+                            <div class="image">
+                                <canvas></canvas>
+                            </div>
+                            <div class="content">
+                                <div class="header">Project 67</div>
+                                <div class="meta"> <a>Beta</a> </div>
+                                <div class="description"> A game that kids at school are making me make.</div>
+                            </div>
+                            <div class="extra content"> <span class="right floated">
+                                Created in 2016
+                            </span> <span>
+                                <a href="https://javascript-game-using-classes-herohamp.c9users.io/" target="_blank">
+                                    <i class="external icon"></i>
+                                    Go to Demo! Will not always be up!
+                                </a>
+                            </span> </div>
+                        </div>
                     </div>
                     <p class="ref"> © Zorgtech 2016-<script type="text/javascript">document.write(new Date().getFullYear());</script> </p>
                 </div>
