--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
                 <p> Zorgtech strives to make any cool thing they can and do it with style some of our projects can be found below! </p>
                 <div class="ui link cards" style="float:left;">
                     <div class="card">
-                        <div class="image">
-                            <canvas></canvas>
-                        </div>
                         <div class="content">
                             <div class="header">Zide</div>
                             <div class="meta"> <a>In beta</a> </div>
@@ -54,9 +51,6 @@
                         </div>
                   </div>
                         <div class="card">
-                            <div class="image">
-                                <canvas></canvas>
-                            </div>
                             <div class="content">
                                 <div class="header">Fkmath.js</div>
                                 <div class="meta"> <a>Finished</a> </div>
@@ -72,20 +66,17 @@
                             </span> </div>
                         </div>
                         <div class="card">
-                            <div class="image">
-                                <canvas></canvas>
-                            </div>
                             <div class="content">
-                                <div class="header">Project 67</div>
+                                <div class="header">Project Our</div>
                                 <div class="meta"> <a>Beta</a> </div>
-                                <div class="description"> A game that kids at school are making me make.</div>
+                                <div class="description"> A game "made" by kids at my school! aka I make it they suggest</div>
                             </div>
                             <div class="extra content"> <span class="right floated">
                                 Created in 2016
                             </span> <span>
-                                <a href="https://javascript-game-using-classes-herohamp.c9users.io/" target="_blank">
+                                <a href="https://our.zorgtech.org/" target="_blank">
                                     <i class="external icon"></i>
-                                    Go to Demo! Will not always be up!
+                                    Go to latest stable demo!
                                 </a>
                             </span> </div>
                         </div>
