--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="codrops-header">
                 <h1>Zorgtech<span>We strive to advance the internet in new and exciting ways!</span></h1>
                 <p> Zorgtech strives to make any cool thing they can and do it with style some of our projects can be found below! </p>
-                <div class="ui link cards" style="float:left;">
-                    <div class="card">
+                <div class="ui link three column grid">cards" style="float:left;">
+                    <div class="card fluid">
                         <div class="content">
                             <div class="header">Zide</div>
                             <div class="meta"> <a>In beta</a> </div>
@@ -50,7 +50,7 @@
                             </span> 
                         </div>
                   </div>
-                        <div class="card">
+                        <div class="card fluid">
                             <div class="content">
                                 <div class="header">Fkmath.js</div>
                                 <div class="meta"> <a>Finished</a> </div>
@@ -65,7 +65,7 @@
                                 </a>
                             </span> </div>
                         </div>
-                        <div class="card">
+                        <div class="card fluid">
                             <div class="content">
                                 <div class="header">Project Our</div>
                                 <div class="meta"> <a>Beta</a> </div>
