--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="codrops-header">
                 <h1>Zorgtech<span>We strive to advance the internet in new and exciting ways!</span></h1>
                 <p> Zorgtech strives to make any cool thing they can and do it with style some of our projects can be found below! </p>
-                <div class="ui link three column grid">cards" style="float:left;">
+                <div class="ui link three column grid cards" style="float:left;">
                     <div class="card fluid">
                         <div class="content">
                             <div class="header">Zide</div>
