--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
   ga('send', 'pageview');
 
 </script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- zorgtech -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-5613603335192804"
+     data-ad-slot="4763803775"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </body>
 
 </html>
